--- a/index.html
+++ b/index.html
@@ -23,10 +23,65 @@
 <body>
   <header style="background: linear-gradient(to right, #005fa3, #0094d9); color: white; padding: 2.5rem 1rem; text-align: center; border-bottom: 5px solid #ffcc00; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
     <h1 style="font-size: 2.2rem; letter-spacing: 1px; text-shadow: 1px 1px 3px rgba(0,0,0,0.3);">フロントガラスのヒビ、出張リペアで即解決！</h1>
-    <p style="text-align: center; max-width: 800px; margin: 0.5rem auto 0; font-size: 1rem; font-weight: bold; color: #000; background: #ffeb99; padding: 0.5rem 1rem; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-    ※ 二重に傷が見えるのは、施工時にガラスの内側に鏡を取り付けて作業しているためです。
-  </p>
-</section>
+    <p style="font-size: 1.5rem; font-weight: bold; margin: 0.8rem 0; background: rgba(255,204,0,0.9); color: black; padding: 0.5rem 1rem; border-radius: 10px; display: inline-block;">
+      🚙 <strong style="font-size: 1.5rem;">出張専門</strong> ご自宅・職場どこでもお伺いします！<br>
+      📅 <strong>土日祝も対応！</strong>
+    </p>
+    <p style="font-size: 1rem;">
+      <strong>グラスリペアリングS｜〒366-0818 埼玉県深谷市萱場381-34｜
+        <a href="tel:09064843905" style="color: white; text-decoration: underline;">TEL 090-6484-3905</a>
+      </strong>
+    </p>
+    <p style="margin-top: 1rem;">自宅・職場の駐車場でその場で修理できます</p>
+  
+    <img src="施工中.jpg" alt="フロントガラス施工中" style="max-width: 66%; height: auto; margin-top: 1rem; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
+  </header>
+
+  <section class="section">
+    <h2>料金案内</h2>
+    <div class="price-box">
+      <p><strong>1か所目：</strong> 15,000円（税込）</p>
+      <p><strong>2か所目以降：</strong> 9,000円（税込）</p>
+      <p>※出張費無料（対応エリア内）</p>
+    </div>
+  </section>
+
+  <section class="section">
+    <h2>サービスの特徴</h2>
+    <ul>
+      <li><strong>出張専門！</strong> ご自宅・職場の駐車場で作業可能</li>
+      <li>即日対応・短時間修理</li>
+    </ul>
+  </section>
+
+  <section class="section">
+    <h2>出張対応エリア</h2>
+    <p>埼玉県全域、群馬県伊勢崎市・太田市周辺に対応しております。</p>
+    <p>その他の地域についてもお気軽にご相談ください。</p>
+  </section>
+
+  <section class="section">
+    <h2>リペアについてのご説明</h2>
+    <p>フロントガラスのリペアは<strong>亀裂を完全に伸びなくする作業ではなく、伸びにくくするための処置</strong>です。</p>
+    <p>リペアをしても<strong>必ずしもヒビが見えなくなるわけではありません</strong>。傷の状態や亀裂の角度、位置などによって見た目の仕上がりは異なります。</p>
+    <p><strong>亀裂が目立たなくなるのは、あくまでリペアによってヒビが伸びにくくなった結果として起こる副産物</strong>です。</p>
+    <p><strong>当社で施工したリペアにおいて、後日亀裂が進行した事例はこれまでにありません。</strong><br>丁寧で確実な施工を心がけておりますので、安心してご依頼ください。</p>
+  
+    <div style="display: flex; gap: 1rem; margin-top: 1rem; flex-wrap: wrap; justify-content: center;">
+      <div style="text-align: center;">
+        <p><strong>施工前</strong></p>
+        <img src="前.jpg" alt="施工前のヒビ" style="max-width: 66%; height: auto; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
+      </div>
+      <div style="text-align: center;">
+        <p><strong>施工後</strong></p>
+        <img src="後.jpg" alt="施工後の状態" style="max-width: 66%; height: auto; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.2);">
+      </div>
+    </div>
+
+    <p style="text-align: center; max-width: 800px; margin: 0.5rem auto 0; font-size: 0.95rem; color: red;">
+      ※ 二重に傷が見えるのは、施工時にガラスの内側に鏡を取り付けて作業しているためです。
+    </p>
+  </section>
 
   <section class="section">
     <h2>公式LINEからのお問い合わせ</h2>
@@ -38,7 +93,8 @@
   </section>
 
   <footer style="text-align: center; padding: 1rem; background: #333; color: #ccc;">
-    &copy; 2025 グラスリペアリングS ｜ 〒366-0818 埼玉県深谷市萱場381-34 ｜ TEL 090-6484-3905
+    &copy; 2025 グラスリペアリングS ｜ 〒366-0818 埼玉県深谷市萱場381-34 ｜ 
+    <a href="tel:09064843905" style="color: #ccc; text-decoration: underline;">TEL 090-6484-3905</a>
   </footer>
 </body>
 </html>
